# CourseWork_DO

./: .babelrc  .eslintrc.js  .gitignore  CMakeLists.txt  LICENSE  README.md  bundle.js  index.html  jest.config.js  main.cpp  package-lock.json  package.json  webpack.config.js
lib/: Algorithm.cpp  Algorithm.h  CMakeLists.txt
public/: index.html
sources/input/: 1.txt
sources/output/: 1.txt
src/: App.js  index.js  index.scss
src/components/: Bee.js  Dummy.js  Dummy1.js  Genetic.js  Greedy.js  utils.js
src/components/Home/: index.js
src/components/Layout/: index.js
src/components/Layout/Header/: index.js
src/components/State/: index.js
src/constants/propTypes/: index.js  state.js  test.js
src/core/: state.js  test.js  utils.js
src/core/__tests__/: utils.spec.js
src/core/algorithms/: index.js  optimizeLocally.js
src/core/algorithms/bee/: index.js
src/core/algorithms/bee/nextIteration/: index.js
src/core/algorithms/generic/: index.js
src/core/algorithms/generic/nextIteration/: createSuccessors.js  index.js  mutateSuccessors.js  optimizeLocally.js  selection.js
src/core/algorithms/genetic/: index.js  utils.js
src/core/algorithms/genetic/nextIteration/: createSuccessors.js  index.js  mutateSuccessors.js  selection.js
src/core/algorithms/greedy/: getGreediedState.js  index.js
src/core/helpers/: filterObjectByValue.js  index.js
src/problems/: 1.js  2.js  index.js  makeRandomSkeleton.js  makeSkeleton.js
utils/: CMakeLists.txt  Utils.cpp  Utils.h
